<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/question_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="10dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:checked="false"
                android:textColor="@color/white"
                android:background="@drawable/radio_background"
                android:button="@drawable/radio_background"
                android:textAlignment="center"
                android:id="@+id/answer_1"
                android:text="@string/heel_erg_mee_eens"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:padding="12dp"
                android:checked="false"
                android:textColor="@color/white"
                android:background="@drawable/radio_background"
                android:button="@drawable/radio_background"
                android:textAlignment="center"
                android:id="@+id/answer_2"
                android:text="@string/beetje_mee_eens"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:checked="false"
                android:textColor="@color/white"
                android:background="@drawable/radio_background"
                android:button="@drawable/radio_background"
                android:textAlignment="center"
                android:id="@+id/answer_3"
                android:text="@string/niet_zeker"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:padding="12dp"
                android:checked="false"
                android:textColor="@color/white"
                android:background="@drawable/radio_background"
                android:button="@drawable/radio_background"
                android:textAlignment="center"
                android:id="@+id/answer_4"
                android:text="@string/beetje_mee_oneens"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:checked="false"
                android:textColor="@color/white"
                android:background="@drawable/radio_background"
                android:button="@drawable/radio_background"
                android:textAlignment="center"
                android:id="@+id/answer_5"
                android:text="@string/heel_erg_mee_oneens"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:paddingVertical="16dp"
            android:paddingHorizontal="20dp"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:background="@drawable/button_background"
            android:text="@string/volgende_vraag"
            android:id="@+id/next_question" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>